--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,13 +4,13 @@ backend:
   branch: master
   ### enable below lines for github integration ###
   # name: github
-  # repo: surjithctly/neat-starter
+  # repo: fliptopbox/neat-starter
 media_folder: "src/static/img"
 public_folder: "/static/img"
 
 # Please run "npx netlify-cms-proxy-server" for local backend
-local_backend: true
-# publish_mode: editorial_workflow
+# local_backend: true
+publish_mode: editorial_workflow
 collections:
   - label: "Blog"
     name: "blog"
